@@ -66,6 +66,7 @@ COMMON_CONFIGURE_FLAGS= \
   --enable-thread-safety \
   --enable-debug \
   --disable-rpath \
+  --with-selinux \
   --with-uuid=e2fs \
   --with-gnu-ld \
   --with-pgport=5432 \
@@ -78,6 +79,12 @@ ifeq ($(DEB_STAGE),stage1)
 BOOTSTRAP_FLAGS=
 else
 BOOTSTRAP_FLAGS= --with-krb5 --with-gssapi --with-ldap
+endif
+
+# --with-selinux needs libselinux 2.1.10
+SEVERSION = $(shell dpkg-query -f '$${Version}' --show libselinux1-dev)
+ifeq ($(shell dpkg --compare-versions $(SEVERSION) ge 2.1.10 && echo yes),yes)
+SELINUX_FLAGS= --with-selinux
 endif
 
 # build should fail on test suite failures on all arches
@@ -107,7 +114,8 @@ stamp/configure-build:
            --with-includes=/usr/include/tcl$(TCL_VER) \
            PYTHON=/usr/bin/python \
            $(COMMON_CONFIGURE_FLAGS) \
-           $(BOOTSTRAP_FLAGS)
+           $(BOOTSTRAP_FLAGS) \
+           $(SELINUX_FLAGS)
 	touch "$@"
 	
 stamp/configure-build-py3:
